# legal-agent-crew

./: .env.example  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  app.py  pyproject.toml
Final_design/: 01-proposal.md  02-detailed_design.md  04-implementation-blueprint.md  Funtion_design.md  progress.md
Final_design/03-vibe-coding-task/: 01-project-infrastructure.md  02-config-management.md  03-database-models.md  04-document-upload.md  05-pdf-parsing.md  06-knowledge-base-management.md  07-indexing.md  08-hybrid-retrieval.md  09-query-classifier.md  10-query-rewrite.md  11-evidence-pack-builder.md  12-answerability-evaluator.md  13-trusted-web-search.md  14-legal-reasoning-generator.md  15-citation-verification.md  16-evaluation.md  17-logging-observability.md  18-langgraph-workflow.md  19-mcp-style-tools.md  20-fastapi-backend.md  21-streamlit-frontend.md  22-business-functions.md  23-testing-quality.md  24-docker-deployment.md  README.md  progress.md
Final_design/docs/: assumptions.md  decisions.md
Final_design/reports/quality/: latest.md
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: config.py  exceptions.py  response.py  tracing.py
app/db/: models.py  session.py
app/llm/: __init__.py  base.py  fake.py  openai_compatible.py  prompt_registry.py
app/repositories/: base.py  documents.py  tasks.py
app/services/: logging_service.py  task_service.py
app/tools/: __init__.py
app/workflows/: __init__.py
config/: app.yaml  database.yaml  evaluation.yaml  models.yaml  prompts.yaml  retrieval.yaml  security.yaml  settings.py  sources.yaml
frontend/legacy/: README.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/generation/: llm_factory.py  rag.py
src/workflows/: agent_workflow.py
tests/unit/: test_w0_smoke.py  test_w1_config.py  test_w1_database.py  test_w1_health.py  test_w1_llm.py  test_w1_logging.py
