[project]
name = "paralegal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.13.0",
    "elasticsearch>=8.14.0",
    "fastapi>=0.115.0",
    "firecrawl-py>=0.0.16",
    "crewai>=0.74.0",
    "crewai-tools>=0.10.0",
    "langfuse>=2.50.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.0",
    "nest-asyncio>=1.6.0",
    "numpy>=1.24.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.24.0",
    "pymilvus>=2.4.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.2.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.48.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.2.0",
    "openai>=1.43.0",
    "ansi2html>=1.9.1",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: fast tests with no external services",
    "integration: tests that require local service dependencies",
    "e2e: end-to-end workflow tests",
    "external: tests that call real external APIs",
    "slow: tests that are expected to take noticeable time",
    "ocr: tests that exercise OCR behavior",
]

[tool.coverage.run]
branch = true
source = ["app", "config", "src"]
omit = [
    "*/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true
explicit_package_bases = true
exclude = [
    "cache/",
    "data/",
    "legacy/",
    "frontend/legacy/",
    "migrations/",
    "venv/",
]

[[tool.mypy.overrides]]
module = [
    "ansi2html.*",
    "crewai.*",
    "crewai_tools.*",
    "dotenv.*",
    "firecrawl.*",
    "loguru.*",
    "nest_asyncio.*",
    "pymilvus.*",
    "pypdf.*",
    "sentence_transformers.*",
    "streamlit.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "cache",
    "data",
    "legacy",
    "frontend/legacy",
    "migrations",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "DTZ", "PIE", "PT", "RET", "RUF", "S", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
